--- a/smd/smd.vcxproj
+++ b/smd/smd.vcxproj
@@ -69,7 +69,7 @@
     <_ProjectFileVersion>16.0.30427.251</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)Quake2\smd\</OutDir>
+    <OutDir>$(SolutionDir)Rion\smd\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>true</LinkIncremental>
     <TargetName>gamex86</TargetName>
@@ -77,11 +77,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <TargetName>gamex64</TargetName>
-    <OutDir>$(SolutionDir)Quake2\smd\</OutDir>
+    <OutDir>$(SolutionDir)Rion\smd\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(SolutionDir)Quake2\smd\</OutDir>
+    <OutDir>$(SolutionDir)Rion\smd\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
     <TargetName>gamex86</TargetName>
@@ -89,7 +89,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>gamex64</TargetName>
-    <OutDir>$(SolutionDir)Quake2\smd\</OutDir>
+    <OutDir>$(SolutionDir)Rion\smd\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
