--- a/xatrix/xatrix.vcxproj
+++ b/xatrix/xatrix.vcxproj
@@ -68,7 +68,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)Quake2\xatrix\</OutDir>
+    <OutDir>$(SolutionDir)Rion\xatrix\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>true</LinkIncremental>
     <TargetName>gamex86</TargetName>
@@ -76,11 +76,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <TargetName>gamex64</TargetName>
-    <OutDir>$(SolutionDir)Quake2\xatrix\</OutDir>
+    <OutDir>$(SolutionDir)Rion\xatrix\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(SolutionDir)Quake2\xatrix\</OutDir>
+    <OutDir>$(SolutionDir)Rion\xatrix\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
     <TargetName>gamex86</TargetName>
@@ -88,7 +88,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>gamex64</TargetName>
-    <OutDir>$(SolutionDir)Quake2\xatrix\</OutDir>
+    <OutDir>$(SolutionDir)Rion\xatrix\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
