--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -3,9 +3,9 @@ env:
   VK_VERSION: 1.3.224.1
 on:
  workflow_dispatch:
-#  push:
-#    branches:
-#      - master
+ push:
+   branches:
+     - master
 
 jobs:
   Windows:
